# object-detection-eda-pyqt

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
core/: advanced_analysis.py  analyzer.py  data_loader.py  duplicate_finder.py  quality_analysis.py  signal_analysis.py
core/analysis/: cartography.py  manifold.py  quality.py  statistics.py  texture_analysis.py  training_dynamics.py
core/data/: coco.py  data_loader.py  dataset_splitter.py  yolo.py
core/utils/: device.py
ui/: main_window.py
ui/widgets/: __init__.py  advanced_widget.py  cartography_widget.py  difficulty_widget.py  duplicate_widget.py  export_dialog.py  geometry_widget.py  guide_widget.py  health_widget.py  multi_load_dialog.py  overview_widget.py  quality_widget.py  relation_widget.py  selective_clear_dialog.py  signal_widget.py  spatial_widget.py  stat_widget.py  strategy_widget.py  viewer_widget.py
